<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

  <header android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$SyncingPreferences"
    android:title="@string/pref_syncing_header" />

  <header android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$NotificationPreferences"
    android:title="@string/pref_notification_header" />

  <header android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$AppearancePreferences"
    android:title="@string/pref_appearance_header" />

  <header android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$BackupPreferences"
    android:title="@string/pref_backup_header" />

  <header android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$AboutPreferences"
    android:title="@string/pref_about_header" />

</preference-headers>
